# mines-seeker

./: About.qml  AboutQt.qml  CMakeLists.txt  DialogConfirmMode.qml  DialogCustomMode.qml  DialogInputRecord.qml  DialogPause.qml  GameLanguage.qml  GameMenu.qml  GameToolbar.qml  License.qml  Loading.qml  LoadingSplash.qml  Main.qml  Preferences.qml  RecordEntry.qml  RecordViewer.qml  RecordViewerPage.qml  SavingPopup.qml  UIArcade.qml  UIBoard.qml  UICell.qml  UIRipple.qml  arcade.cpp  arcade.h  board.cpp  board.h  cell.cpp  cell.h  generalsettings.cpp  generalsettings.h  main.cpp  mines_es.ts  mines_ko.ts  recordsmanager.cpp  recordsmanager.h  startupprogress.cpp  startupprogress.h
